help button fixed (white space jump)

--- a/Homepage/Companypage/style.css
+++ b/Homepage/Companypage/style.css
@@ -19,6 +19,7 @@
     font-weight: 600;
   }
 
-  
-
-  
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+  }
